<resources>
    <string name="app_name">nosmoking</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_about_text">Presented by</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_button">Smoking</string>
    <string name="appwidget_button_status">Status</string>
    <string name="title_activity_about">About</string>
    <string name="homepage">http://www.mmi-sc.co.jp/</string>
    <string name="main_strings_level1">Let\'s stop smoking.</string>
    <string name="main_strings_level2">you should stop smoking.</string>
    <string name="main_strings_level3">The consult your doctor.</string>
    <string name="main_strings_level4">Smoke or Die?</string>
    <string name="debug_dialog">Dialog</string>
    <string name="debung_input">Input Count</string>
    <string name="setting_menu_1">Reset</string>
    <string name="setting_menu_2">Set Felica</string>
    <string name="title_activity_setting_felica">Setting Felica</string>
    <string name="setting_felica_set_legend">Please setting the Felica card you would like to register.\nWhen being registered already, setting is overwritten.</string>
    <string name="setting_felica_set_ok">It was recognized.\nThis card will become effective from now on.</string>
    <string name="setting_felica_set_warning">NFC setting is off.\nPlease turn on NFC setting more than a setting application.</string>
    <string name="title_activity_nfc_intent">NfcIntentActivity</string>
    <string name="time_day">Day</string>
    <string name="time_hour">Hour</string>
    <string name="time_min">Min</string>
    <string name="action_set_nfc">Settinf Felica</string>
    <string name="title_activity_manual">Manual</string>
    <string name="action_contact">Contact</string>
    <string name="contact_form">http://goo.gl/forms/Z0IH58DPqK</string>
    <string name="title_activity_setting_menu">Setting Menu</string>
    <string name="message_activity_setting_menu">Setting Menu</string>
    <string name="button_menu_felica">Felica</string>
    <string name="button_reset_count">Reset Count</string>
    <string name="message_reset_count">Count Reset Done.</string>
    <string name="message_confirm_dlg">Can I reset a count?</string>
    <string name="button_ok">OK</string>
    <string name="button_no">NO</string>
    <string name="last_tap_time">Last Smoking...</string>
    <string name="last_tap_time_end">Time!!</string>
</resources>
