<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWidget"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#09C"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_below="@+id/appwidget_text">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/appwidget_button_status"
            android:id="@+id/button_status"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/appwidget_button"
            android:id="@+id/button_count"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/appwidget_text" />


    </LinearLayout>

</RelativeLayout>